--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device; user-scalable=0;/>"
+        <meta name="viewport" content="width=device; user-scalable=0;/">
         <title>
          MAHDI ALIYU GUSAU |OFFICIAL WEBSITE
         </title>
