--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html>
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="OFFICIAL WEBSITE">
@@ -50,8 +50,7 @@ img{
        </style>
     </head>
     <body bgcolor="#061116" style="color:white; font-family:Verdana;">      
-    <table border="0" width="1350" height="550" align="center" cellspacing="4" cellpadding="7"
-        background="IMG_2440.jpg" align="center">
+    <table border="0" width="1350" height="550" align="center" cellspacing="4" cellpadding="7" background="IMG_2440.jpg">
     <tr height="50%">
     <td width="580"><img src="People's_Democratic_Party_Nigeria.png" width="150" alt="logo"></td>
     <a name="home"></a>
