--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
     <head>
+<meta charset="UTF-8">
+        <meta name="description" content="OFFICIAL WEBSITE">
+        <meta name="author" content="Author HSH">
+        <meta name="keywords" content="HTML, CSS">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
          MAHDI ALIYU GUSAU |OFFICIAL WEBSITE
         </title>
